Menu navegation fixed, now each section is correctly visible on screen

--- a/src/Styles/contact.css
+++ b/src/Styles/contact.css
@@ -1,4 +1,4 @@
-.flex-content#contact {
+.flex-content.contact {
   justify-content: space-evenly;
 }
 
