--- a/src/Styles/global.css
+++ b/src/Styles/global.css
@@ -28,7 +28,6 @@
   flex-flow: row wrap;
   padding: 20px;
   margin: 50px 0px 50px 0px;
-  align-items: stretch;
   justify-content: center;
   align-items: stretch;
   flex-grow: 0;
@@ -36,7 +35,7 @@
   flex-basis: 85%;
   border-radius: 15px;
   animation: onLoad 2s;
-  background-color: burlywood;
+  background-color: #f7f7f7;
   box-shadow: 0px 0px 4px gray;
   max-width: 1366px;
 }
